--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "intl-tel-input": "^17.0.19",
     "jquery": "^3.6.3",
     "vue": "^2.6.14",
-    "vue-cropperjs": "^4.2.0",
     "vue-carousel": "^0.18.0",
+    "vue-cropperjs": "^4.2.0",
     "vue-router": "^3.5.1",
     "vue-tailwind": "^2.5.1",
     "vue-tel-input": "^5.12.0",
     "vue-tinder": "^2.0.3",
     "vue-touch": "^2.0.0-beta.4",
+    "vue2-hammer": "^2.1.2",
     "vue2-interact": "^0.0.3",
     "vue2-touch-events": "^3.2.2",
     "vuex": "^3.4.0"
