--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "lint-staged": "^11.1.2",
+    "node-sass": "^8.0.0",
     "postcss": "^8.4.20",
     "prettier": "^2.4.1",
+    "sass-loader": "^13.2.2",
     "tailwindcss": "^3.2.4",
     "vue-template-compiler": "^2.6.14"
   },
