--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "animate-css-grid": "^1.5.1",
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
