--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "intl-tel-input": "^17.0.19",
     "jquery": "^3.6.3",
     "save": "^2.9.0",
+    "unorm": "^1.6.0",
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
     "vue-cropperjs": "^4.2.0",
