--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.14",
     "vue-carousel": "^0.18.0",
     "vue-cropperjs": "^4.2.0",
+    "vue-i18n": "^8.28.2",
     "vue-router": "^3.5.1",
     "vue-tailwind": "^2.5.1",
     "vue-tel-input": "^5.12.0",
