--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-cropperjs": "^4.2.0",
     "vue-i18n": "^8.28.2",
     "vue-router": "^3.5.1",
+    "vue-slider-component": "^3.2.24",
     "vue-tailwind": "^2.5.1",
     "vue-tel-input": "^5.12.0",
     "vue-tinder": "^2.0.3",
