--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.12",
     "emoji-mart-vue": "^2.6.6",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.9.4",
     "fuse.js": "^6.6.2",
     "google-translate-api": "^2.3.0",
