--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-i18n": "^8.28.2",
     "vue-router": "^3.5.1",
     "vue-slider-component": "^3.2.24",
+    "vue-swing": "^0.0.10",
     "vue-tailwind": "^2.5.1",
     "vue-tel-input": "^5.12.0",
     "vue-tinder": "^2.0.3",
