--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lint-staged": "^11.1.2",
     "node-sass": "^8.0.0",
     "postcss": "^8.4.20",
-    "prettier": "^2.4.1",
+    "prettier": "2.8.8",
     "sass-loader": "^13.2.2",
     "tailwindcss": "^3.2.4",
     "vue-template-compiler": "^2.6.14"
